fusion & uni_susie

--- a/workflow/twas_fusion.ipynb
+++ b/workflow/twas_fusion.ipynb
@@ -8,7 +8,7 @@
    "source": [
     "# TWAS FUSION analysis\n",
     "\n",
-    "This notebook implements a TWAS analysis workflow using the FUSION software."
+    "This notebook implements a ready to use worflow to perform TWAS analysis by connecting the components of FUSION"
    ]
   },
   {
@@ -72,8 +72,8 @@
     "kernel": "SoS"
    },
    "source": [
-    "# Input and Output\n",
-    "## Input\n",
+    "## Input and Output\n",
+    "### Input\n",
     "- `--gwas_sumstat` The GWAS sum stat text file documenting the associations between the SNP and the disease. It shall contain at least four column: the SNP rsID, the effect allele, the other allele, and the Z-score describing the relationship between the SNP and the disease. \n",
     "- `--genotype_list` An index text file with two columns of chromosome and the corresponding PLINK bed file.\n",
     "- `--molecular-pheno`, The text file containing the table describing the molecular phenotype. It shall have regions(genes) as rows and samples as columnes\n",
@@ -83,19 +83,7 @@
     "\n",
     "\n",
     "\n",
-    "\n",
-    "\n",
-    "**FIXME: here are also some text i dug up later in your workflow codes. Please explain them up-front. We would not expect users to read this notebook beyong the \"Working example \" section**\n",
-    "This probably is served as a self reminder of what each file do and therefore not expected the user to see, so maybe move them back?\n",
-    "\n",
-    "```\n",
-    "1. The gene expression pheno type, a three column table for each genes, with the first two columns specifing the family ID and within family ID of the samples. In the current case where all samples are unrelated, the first two columns are simply sample ID. The third column is the actual gene expression value.\n",
-    "2. The plink trio file for each specific genes, containing only the snps corresponding th the regions whose expression are recorded. In particular, the snp are filtered according to the genetics regions outlined by Position+/-windows.\n",
-    "```\n",
-    "\n",
-    "\n",
-    "\n",
-    "## Output\n",
+    "### Output\n",
     "\n",
     "- `.wgt.Rdat` The actual weight data that are computed.\n",
     "- `.weight_list.txt` The index text file recording information about each of the wgt.Rdat data, including the filename, corresponding region ID, Chromosomes, start and end position, heritability, and the SE and P-value of the heritability.\n",
@@ -116,7 +104,7 @@
     "kernel": "SoS"
    },
    "source": [
-    "# Command interface "
+    "## Command interface "
    ]
   },
   {
@@ -199,7 +187,7 @@
     "kernel": "SoS"
    },
    "source": [
-    "# Working example\n",
+    "## Working example\n",
     "The MWE file is availble at :\n",
     "\"https://www.synapse.org/#!Synapse:syn24179064/files/\"\n",
     "\n",
@@ -348,7 +336,7 @@
     "kernel": "SoS"
    },
    "source": [
-    "# Global parameter settings\n",
+    "## Global parameter settings\n",
     "The section outlined the parameters that can be set in the command interface."
    ]
   },
@@ -685,426 +673,6 @@
    ],
    "source": [
     "pwd"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "kernel": "SoS"
-   },
-   "source": [
-    "## Conducting susieR test\n",
-    "This step use the susieR packages to recompute the heritability and the weight of the result"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "kernel": "SoS"
-   },
-   "outputs": [],
-   "source": [
-    "#Susie test\n",
-    "[susie_3,susie_cv_3]\n",
-    "input:  group_by = 3, group_with = 'regions'\n",
-    "output: f'{wd:a}/susie/{_input[0]:bn}.susie.hsq',\n",
-    "        f'{wd:a}/susie/{_input[0]:bn}.wgt.txt',\n",
-    "        f'{wd:a}/susie/{_input[0]:bn}.susie.model.RData'\n",
-    "\n",
-    "import os\n",
-    "skip_if(os.path.getsize(f'{_input[0]}') == 0)\n",
-    "task: trunk_workers = 1, trunk_size = job_size, walltime = '4h',  mem = \"6G\" , tags = f'{step_name}_{_output[0]:bn}'\n",
-    "R: expand= \"$[ ]\", stderr = f'{_output[0]:n}.stderr', stdout = f'{_output[0]:n}.stdout', container = container,volumes = [f'{wd:a}:{wd:a}']\n",
-    "    library(\"dplyr\")\n",
-    "    library(\"tibble\")\n",
-    "    library(\"susieR\")\n",
-    "    library(\"plink2R\")\n",
-    "    library(\"readr\")\n",
-    "    library(\"modelr\")\n",
-    "    library(\"purrr\")\n",
-    "\n",
-    "    # Define functions\n",
-    "    ###Functions to compute MAF and missing genotype rate\n",
-    "    compute_maf <- function(geno){\n",
-    "      f <- mean(geno,na.rm = TRUE)/2\n",
-    "      return(min(f, 1-f))\n",
-    "    }\n",
-    "    \n",
-    "    compute_missing <- function(geno){\n",
-    "      miss <- sum(is.na(geno))/length(geno)\n",
-    "      return(miss)\n",
-    "    }\n",
-    "    \n",
-    "    mean_impute <- function(geno){\n",
-    "      f <- apply(geno, 2, function(x) mean(x,na.rm = TRUE))\n",
-    "      for (i in 1:length(f)) geno[,i][which(is.na(geno[,i]))] <- f[i]\n",
-    "      return(geno)\n",
-    "    }\n",
-    "    \n",
-    "    is_zero_variance <- function(x) {\n",
-    "      if (length(unique(x%>%na.omit))==1) return(T)\n",
-    "      else return(F)\n",
-    "    }\n",
-    "    ### Filter X matrix\n",
-    "    filter_X <- function(X, missing_rate_thresh, maf_thresh) {\n",
-    "      rm_col <- which(apply(X, 2, compute_missing) > missing_rate_thresh)\n",
-    "      if (length(rm_col)) X <- X[, -rm_col]\n",
-    "      rm_col <- which(apply(X, 2, compute_maf) < maf_thresh)\n",
-    "      if (length(rm_col)) X <- X[, -rm_col]\n",
-    "      rm_col <- which(apply(X, 2, is_zero_variance))\n",
-    "      if (length(rm_col)) X <- X[, -rm_col]\n",
-    "      return(mean_impute(X))}\n",
-    "      \n",
-    "    ###Function to impute the missing X with means and then scale and center X\n",
-    "      impute_and_transform = function(genos,impute = TRUE){\n",
-    "      tmp = genos\n",
-    "      if(impute == TRUE){\n",
-    "      for(i in 1:ncol(tmp)){\n",
-    "        tmp[,i]=coalesce(tmp[,i],mean(tmp[,i]%>%na.omit()))%>%scale()}\n",
-    "        return(tmp)\n",
-    "      } else {\n",
-    "    for(i in 1:ncol(tmp)){\n",
-    "        tmp[,i]=tmp[,i]%>%scale()}\n",
-    "        return(tmp)}}\n",
-    "    \n",
-    "\n",
-    "    # Load data and transform\n",
-    "    genos = read_plink(\"$[_input[0]:n]\")\n",
-    "  \n",
-    "    # Filter X by 0.1 NA and 0.01 MAF, and then transfrom X\n",
-    "    \n",
-    "    X_ftr = filter_X(genos$bed,0.1,0.01)\n",
-    "    X = impute_and_transform(X_ftr)\n",
-    "    \n",
-    "    Y = genos$fam%>%as_tibble()%>%mutate(name = paste(V1,\":\",V2,sep = \"\"))\n",
-    "    \n",
-    "    # Make sure X and Y have the same order\n",
-    "    Y = Y%>%arrange(match(name,rownames(X)))%>%select(V6)\n",
-    "    \n",
-    "    \n",
-    "    # Center and scale Y \n",
-    "    \n",
-    "    Y = impute_and_transform(Y, impute = FALSE )\n",
-    "    Y = Y$V6\n",
-    "    \n",
-    "    # Susie with full samples\n",
-    "    fitted1 = susie(X, Y,\n",
-    "                  L = $[causal_variables_L],\n",
-    "                  estimate_residual_variance = TRUE, \n",
-    "                  estimate_prior_variance = FALSE,\n",
-    "                  scaled_prior_variance = $[scaled_prior_variance])\n",
-    "                  \n",
-    "    H1 = var(predict(fitted1))/var(Y)\n",
-    "    \n",
-    "    top_pip = which(fitted1$pip == fitted1$pip%>%max())\n",
-    "    top_snp_full_sample = colnames(X)[top_pip]\n",
-    "    top_snp_full_sample = paste(top_snp_full_sample,collapse = \",\")\n",
-    "    \n",
-    "    # hsq for the best performing snp using naive way, excluding only the na SNP\n",
-    "    sumstats <- univariate_regression(X, Y)\n",
-    "    z_scores <- sumstats$betahat / sumstats$sebetahat\n",
-    "    max(abs(z_scores%>%na.omit()))\n",
-    "    top_snp = which(abs(z_scores) == max(abs(z_scores%>%na.omit())))\n",
-    "    top_snp\n",
-    "    HH = var(X[,top_snp]*sumstats$betahat[top_snp])/var(Y)\n",
-    "    top_snp_naive = colnames(X)[top_snp]\n",
-    "    top_snp_naive = paste(top_snp_naive,collapse = \",\")\n",
-    "\n",
-    "    # storing all the HSQ\n",
-    "    hsq_tbl = tibble(file = \"$[_input[0]:n]\", \n",
-    "                    region = \"$[_regions[3]]\",\n",
-    "                    CS_size = fitted1$sets$cs%>%length(),\n",
-    "                    hsq_full_sample = H1,\n",
-    "                    top_snp_full_sample = top_snp_full_sample,\n",
-    "                    top_snp_naive = top_snp_naive)\n",
-    "    hsq_tbl%>%write_delim(\"$[_output[0]]\",delim = \"\\t\")\n",
-    "    # storing the wgt computed from susie, excluding only the na SNP\n",
-    "    susie_wgt = tibble(susie = (coef(fitted1)[2:length(coef(fitted1))]))\n",
-    "    susie_wgt%>%write_delim(\"$[_output[1]]\",delim = \"\\t\")\n",
-    "    \n",
-    "    # Save the model for future use\n",
-    "    fitted1$X = X\n",
-    "    fitted1$Y = Y\n",
-    "    save(fitted1, file=\"$[_output[2]]\")\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "kernel": "SoS"
-   },
-   "source": [
-    "## Conducting susieR test\n",
-    "This step conduct 100 times 5 fold cross validation for the susieR weights"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "kernel": "SoS"
-   },
-   "outputs": [],
-   "source": [
-    "# CV with univariate susie\n",
-    "[susie_cv_4]\n",
-    "input: group_by = 3, group_with = 'regions'\n",
-    "output:  f'{wd:a}/susie/{_input[2]:bn}.cv.RData',\n",
-    "         f'{wd:a}/susie/{_input[2]:bn}.cv_diag.RData'\n",
-    "task: trunk_workers = 1, trunk_size = job_size, walltime = '12h',  mem = '8cG', tags = f'{step_name}_{_output[0]:bn}'\n",
-    "R: expand= \"$[ ]\", stderr = f'{_output[0]}.stderr', stdout = f'{_output[0]}.stdout',container = container\n",
-    "    library(\"dplyr\")\n",
-    "    library(\"tibble\")\n",
-    "    library(\"readr\")\n",
-    "    library(\"plink2R\")\n",
-    "    library(\"purrr\")\n",
-    "    library(\"modelr\")\n",
-    "    library(\"susieR\")\n",
-    "    \n",
-    "    # Define functions\n",
-    "   \n",
-    "    ## Compute rmse function\n",
-    "    compute_rmse = function(raw,fitted){\n",
-    "    rmse = rep(0,ncol(raw))\n",
-    "    for (i in 1:ncol(raw)){\n",
-    "      rmse[i] = ((fitted - raw)[,i])^2%>%mean(na.rm = TRUE)%>%sqrt() \n",
-    "      }\n",
-    "    return(rmse)\n",
-    "    }\n",
-    "    \n",
-    "    ## Compute r2 function\n",
-    "    compute_r2 = function(raw,fitted){\n",
-    "      r2 = rep(0,ncol(raw))\n",
-    "      for (j in 1:ncol(raw)){\n",
-    "       r2[j] = summary(lm( as.matrix(fitted[,j]) ~ as.matrix(raw[,j]) ))$adj.r.sq\n",
-    "      }\n",
-    "      return(r2)\n",
-    "    }\n",
-    "    \n",
-    "    ## Compute r2 raw\n",
-    "    \n",
-    "    compute_r2_raw = function(raw,fitted){\n",
-    "      r2 = rep(0,ncol(raw))\n",
-    "      for (j in 1:ncol(raw)){\n",
-    "        r2[j] =  cor(as.matrix(fitted[,j])[which(!is.na(raw[,j]))],raw[,j]%>%na.omit())^2\n",
-    "      }\n",
-    "      return(r2)\n",
-    "    }\n",
-    "    \n",
-    "    ## Get P.value\n",
-    "    compute_pval = function(raw,fitted){\n",
-    "      pval = rep(0,ncol(raw))\n",
-    "      for (k in 1:ncol(raw)){\n",
-    "        pval[k] = summary(lm( fitted[,k]%>%as.matrix ~ raw[,k]%>%as.matrix ))$coef[2,4]\n",
-    "      }\n",
-    "      return(pval)\n",
-    "    }\n",
-    "    \n",
-    "    \n",
-    "\n",
-    "    ###Functions to compute MAF and missing genotype rate\n",
-    "    compute_maf <- function(geno){\n",
-    "      f <- mean(geno,na.rm = TRUE)/2\n",
-    "      return(min(f, 1-f))\n",
-    "    }\n",
-    "    \n",
-    "    compute_missing <- function(geno){\n",
-    "      miss <- sum(is.na(geno))/length(geno)\n",
-    "      return(miss)\n",
-    "    }\n",
-    "    \n",
-    "    mean_impute <- function(geno){\n",
-    "      f <- apply(geno, 2, function(x) mean(x,na.rm = TRUE))\n",
-    "      for (i in 1:length(f)) geno[,i][which(is.na(geno[,i]))] <- f[i]\n",
-    "      return(geno)\n",
-    "    }\n",
-    "    \n",
-    "    is_zero_variance <- function(x) {\n",
-    "      if (length(unique(x))==1) return(T)\n",
-    "      else return(F)\n",
-    "    }\n",
-    "    ### Filter X matrix\n",
-    "    filter_X <- function(X, missing_rate_thresh, maf_thresh) {\n",
-    "      rm_col <- which(apply(X, 2, compute_missing) > missing_rate_thresh)\n",
-    "      if (length(rm_col)) X <- X[, -rm_col]\n",
-    "      rm_col <- which(apply(X, 2, compute_maf) < maf_thresh)\n",
-    "      if (length(rm_col)) X <- X[, -rm_col]\n",
-    "      rm_col <- which(apply(X, 2, is_zero_variance))\n",
-    "      if (length(rm_col)) X <- X[, -rm_col]\n",
-    "      return(mean_impute(X))\n",
-    "    }\n",
-    "    \n",
-    "    ### Produce CV dataset\n",
-    "    cv_data_gen = function(X,Y,times,test_prop){\n",
-    "    # Merged the X and Y for producing testing and training set for modelr cv\n",
-    "    cv_df_raw = cbind(X,Y)%>%as_tibble() \n",
-    "    cv_df = crossv_mc(cv_df_raw, times ,test = test_prop)%>%mutate(\n",
-    "      train_X = map(train,~as_tibble(.x)[1:ncol(X)]%>%as.matrix),\n",
-    "      train_Y = map(train,~as_tibble(.x)[(ncol(X)+1):(ncol(X)+ncol(Y))]%>%as.matrix),\n",
-    "      test_X = map(test,~as_tibble(.x)[1:ncol(X)]%>%as.matrix),\n",
-    "      test_Y = map(test,~as_tibble(.x)[(ncol(X)+1):(ncol(X)+ncol(Y))]%>%as_tibble)\n",
-    "    )  \n",
-    "    \n",
-    "    # Filter Train X with maf and missing, filter test X with the same col as Train X\n",
-    "    cv_df = cv_df%>%mutate(\n",
-    "    train_X = map(train_X,~filter_X(.x,0.1,0.01)),\n",
-    "    test_X = map2(test_X,train_X,~.x%>%as_tibble()%>%select(colnames(.y))%>%as.matrix())\n",
-    "    )\n",
-    "    return(cv_df)\n",
-    "    }\n",
-    "    \n",
-    "    # Load Data\n",
-    "    full_model = attach('$[_input[2]]')\n",
-    "    full_model = full_model$fitted1\n",
-    "    X = full_model$X\n",
-    "    Y = full_model$Y%>%as.tibble()\n",
-    "\n",
-    "    # Create cv dataset\n",
-    "        \n",
-    "    cv_df = cv_data_gen(X,Y,$[cv_times],$[testing_prop])\n",
-    "\n",
-    "    # Actual cv\n",
-    "    \n",
-    "    cv_df = cv_df%>%mutate(\n",
-    "    \n",
-    "   \n",
-    "    ## Do susie\n",
-    "    \n",
-    "      susie = pmap(list(train_X,train_Y),function(first,second)(\n",
-    "        \n",
-    "        susie(first, second,\n",
-    "        L = $[causal_variables_L],\n",
-    "        estimate_residual_variance = TRUE, \n",
-    "        estimate_prior_variance = FALSE,\n",
-    "        scaled_prior_variance = $[scaled_prior_variance])\n",
-    "        )))\n",
-    "    \n",
-    "    # Extract data \n",
-    "    \n",
-    "    cv_df = cv_df%>%mutate(\n",
-    "      weight = map(susie,~\n",
-    "      (coef(.x)[2:length(coef(.x))])\n",
-    "      ),\n",
-    "      test_fitted = map2(susie,test_X,~predict(.x,.y)%>%as_tibble),\n",
-    "      rmse = map2(test_Y,test_fitted,~compute_rmse(.x,.y)),\n",
-    "      r2 = map2(test_Y,test_fitted,~compute_r2(.x,.y)),\n",
-    "      r2_raw = map2(test_Y,test_fitted,~compute_r2_raw(.x,.y)),\n",
-    "      pval = map2(test_Y,test_fitted,~compute_pval(.x,.y))\n",
-    "    )\n",
-    "    \n",
-    "    # Calculate metrics\n",
-    "    \n",
-    "    mean_rmse = cv_df%>%pull(rmse)%>%as.data.frame()%>%t()%>%as_tibble()%>%colMeans()\n",
-    "    mean_r2 = cv_df%>%pull(r2)%>%as.data.frame()%>%t()%>%as_tibble()%>%colMeans()\n",
-    "    mean_r2_raw = cv_df%>%pull(r2_raw)%>%as.data.frame()%>%t()%>%as_tibble()%>%colMeans()\n",
-    "    mean_pval = cv_df%>%pull(pval)%>%as.data.frame()%>%t()%>%as_tibble()%>%colMeans()\n",
-    "\n",
-    "  \n",
-    "    # Save metrics\n",
-    "    full_model$rmse = mean_rmse\n",
-    "    full_model$r2 = mean_r2 \n",
-    "    full_model$r2_raw = mean_r2_raw    \n",
-    "    full_model$pval = mean_pval    \n",
-    "    fitted1 = full_model\n",
-    "    # Save the CV data\n",
-    "    save(cv_df,file = \"$[_output[1]]\")\n",
-    "    \n",
-    "    #Output\n",
-    "    save(fitted1,file = \"$[_output[0]]\")\n",
-    "    \n",
-    "    \n",
-    "    \n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "kernel": "SoS"
-   },
-   "source": [
-    "## Save output\n",
-    "This step create the all_hsq.txt file to summarize the susie result and create a R object to host all the susieR models."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "kernel": "SoS"
-   },
-   "outputs": [],
-   "source": [
-    "#Create all_hsq for susie and saved all the susie object into one RData\n",
-    "[susie_4]\n",
-    "input: group_by = \"all\"\n",
-    "output:f'{wd:a}/susie/all_hsq.txt',\n",
-    "       f'{wd:a}/susie.RData'\n",
-    "task: trunk_workers = 1, trunk_size = job_size, walltime = '12h',  mem = '6G', tags = f'{step_name}_{_output[0]:bn}'\n",
-    "bash: expand= \"$[ ]\"\n",
-    "  head -1 $[_input[0]] > $[_output[0]]\n",
-    "  cat $[wd:a]/susie/*.hsq | grep -v hsq_full_sample | uniq >> $[_output[0]]\n",
-    "\n",
-    "R: expand= \"$[ ]\", stderr = f'{_output[1]}.stderr', stdout = f'{_output[1]}.stdout',container = container\n",
-    "    library(\"dplyr\")\n",
-    "    library(\"tibble\")\n",
-    "    library(\"readr\")\n",
-    "    library(\"purrr\")\n",
-    "    # Load a template\n",
-    "    region = read_delim(\"$[_output[0]]\",delim =\"\\t\")%>%select(path = file, ID = region )\n",
-    "    # get the path\n",
-    "    dir = \"$[_input[0]:d]/\"\n",
-    "    pre = \"$[_input[0]:bnnnnn]\"\n",
-    "    sur = \".susie.model.RData\"\n",
-    "    region = region%>%mutate(path = map(ID, ~paste(collapse = \"\", c(dir,pre,\".\",.x,sur))))\n",
-    "    # Load the data\n",
-    "    output = region%>%mutate(env = map(path,~attach(.x)),\n",
-    "                             model = map(env, ~.x$fitted1))\n",
-    "    # Save the combined output\n",
-    "    save(output,file = \"$[_output[1]]\")\n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "kernel": "SoS"
-   },
-   "outputs": [],
-   "source": [
-    "#Create all_hsq for susie and saved all the susie object into one RData\n",
-    "[susie_cv_5]\n",
-    "input: group_by = \"all\"\n",
-    "output:f'{wd:a}/susie/all_hsq.txt',\n",
-    "       f'{wd:a}/susie_cv.RData'\n",
-    "task: trunk_workers = 1, trunk_size = job_size, walltime = '12h',  mem = '6G', tags = f'{step_name}_{_output[0]:bn}'\n",
-    "bash: expand= \"$[ ]\"\n",
-    "\n",
-    "  head -1 $[_input[0]:nnn].hsq > $[_output[0]]\n",
-    "  cat $[wd:a]/susie/*.hsq | grep -v hsq_full_sample | uniq >> $[_output[0]]\n",
-    "\n",
-    "R: expand= \"$[ ]\", stderr = f'{_output[1]}.stderr', stdout = f'{_output[1]}.stdout',container = container\n",
-    "    library(\"dplyr\")\n",
-    "    library(\"tibble\")\n",
-    "    library(\"readr\")\n",
-    "    library(\"purrr\")\n",
-    "    # Load a template\n",
-    "    region = read_delim(\"$[_output[0]]\",delim =\"\\t\")%>%select(path = file, ID = region )\n",
-    "    # get the path\n",
-    "    dir = \"$[_input[0]:d]/\"\n",
-    "    pre = \"$[_input[0]:bnnnnn]\"\n",
-    "    sur = \".susie.model.cv.RData\"\n",
-    "    region = region%>%mutate(path = map(ID, ~paste(collapse = \"\", c(dir,pre,\".\",.x,sur))))\n",
-    "    # Load the data\n",
-    "    output = region%>%mutate(env = map(path,~attach(.x)),\n",
-    "                             model = map(env, ~.x$fitted1))\n",
-    "    # Save the combined output\n",
-    "    save(output,file = \"$[_output[1]]\")"
    ]
   }
  ],
