fusion & uni_susie

--- a/workflow/mixture_prior.ipynb
+++ b/workflow/mixture_prior.ipynb
@@ -7,8 +7,7 @@
    },
    "source": [
     "# A multivariate EBNM approach for mixture multivariate distribution estimate\n",
-    "\n",
-    "An earlier version of the approach is outlined in Urbut et al 2019. This workflow implements a few improvements including using additional EBMF methods as well as the new `udr` package to fit the mixture model."
+    "Steps for a workflow to generate mixture prior for multivariate susie analysis."
    ]
   },
   {
@@ -46,7 +45,7 @@
     "```\n",
     "sos run mixture_prior.ipynb convert_plink \\\n",
     "    --analysis-units <FIXME> \\\n",
-    "    --plink-sumstats <FIXME> \\\n",
+    "    --molecular-phenotype <FIXME> \\\n",
     "    --name gtex_mixture\n",
     "```\n",
     "\n",
@@ -581,7 +580,7 @@
      "sos"
     ]
    ],
-   "version": "0.20.5"
+   "version": "0.22.3"
   }
  },
  "nbformat": 4,
