--- a/workflow/twas_fusion.ipynb
+++ b/workflow/twas_fusion.ipynb
@@ -7,8 +7,7 @@
    },
    "source": [
     "# TWAS FUSION analysis\n",
-    "\n",
-    "This notebook implements a ready to use worflow to perform TWAS analysis by connecting the components of FUSION"
+    "Ready to use worflow to perform TWAS analysis by connecting the components of FUSION"
    ]
   },
   {
