fusion & uni_susie

--- a/workflow/ROSMAP_reformatting.ipynb
+++ b/workflow/ROSMAP_reformatting.ipynb
@@ -7,11 +7,16 @@
    },
    "source": [
     "# Rosmap Gene expression data reformatting\n",
-    "## Aim\n",
-    "\n",
-    "The aim of this pipeline is to change the header of gene expression file based on a reference file that are made externally. \n",
-    "\n",
-    "An example of the pipeline running is shown below"
+    "Pipeline that reformat and annotate the gene expression file forr ROSMAP dataset."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "kernel": "SoS"
+   },
+   "source": [
+    "## Usage Example"
    ]
   },
   {
@@ -41,22 +46,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 71,
+   "cell_type": "markdown",
    "metadata": {
     "kernel": "Bash"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/Users/haosun/Documents/WG_Reasearch_Assisstant/GIT/twas-dev/WIP/pipeline_prototype\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": []
+   "source": [
+    "## Parameters"
+   ]
   },
   {
    "cell_type": "code",
@@ -83,9 +79,26 @@
     "# where to store the output file\n",
     "\n",
     "# Container option for software to run the analysis: docker or singularity\n",
-    "parameter: container = '/home/hs3163/system_file/twas_latest.sif'\n",
-    "\n",
-    "# change the name of gene_exp, save the modified expression file and the file containing the patients ID whose genotype information are absent.\n",
+    "parameter: container = '/home/hs3163/system_file/twas_latest.sif'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "kernel": "SoS"
+   },
+   "source": [
+    "## Change the name of gene expression file modification"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "kernel": "SoS"
+   },
+   "outputs": [],
+   "source": [
     "[Processing_1]\n",
     "input: ref, gene_exp\n",
     "output: f'{output}/{_input[1]:bn}_rename.txt',\n",
@@ -103,9 +116,26 @@
     "                ~as.character((name$Real_name[pos])))\n",
     "    final = cbind(gene_exp[,1:$[start_at]-1],df)\n",
     "    final%>%readr::write_tsv( path = \"$[_output[0]]\", na = \"NA\", append = FALSE, col_names = TRUE, quote_escape = \"double\")\n",
-    "    name$Name[attr(pos,\"na.action\")]%>%cat(file = \"$[_output[1]]\", sep = \" \")\n",
-    "\n",
-    "# add position to gene_ID based on ensembl \n",
+    "    name$Name[attr(pos,\"na.action\")]%>%cat(file = \"$[_output[1]]\", sep = \" \")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "kernel": "SoS"
+   },
+   "source": [
+    "## Add position to gene ID based on ensembl "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "kernel": "SoS"
+   },
+   "outputs": [],
+   "source": [
     "[Processing_2]\n",
     "input: group_by = 2\n",
     "output: f'{output}/{_input[0]:bn}_region_list.txt'\n",
@@ -170,7 +200,7 @@
      "sos"
     ]
    ],
-   "version": "0.20.1"
+   "version": "0.22.3"
   }
  },
  "nbformat": 4,
