--- a/workflow/complete_mv_susie_workflow.ipynb
+++ b/workflow/complete_mv_susie_workflow.ipynb
@@ -2,32 +2,45 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "kernel": "SoS"
+   },
    "source": [
     "# Complete documentation of excution of TWAS Rosmap MV Susie analysis\n",
-    "\n",
-    "This file document a complete workflow to generate multivariate susie TWAS result for the ROSMAP data set \n",
-    "\n",
+    "Complete workflow to generate multivariate susie TWAS result for the ROSMAP data set."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "kernel": "SoS"
+   },
+   "source": [
     "## Overview\n",
     "1. Data Reformating\n",
     "2. Univariate SuSiE\n",
     "2. Estimation of whole genome prior\n",
     "3. multivariate susie\n",
     "4. Reformatting of mv SuSiE result\n",
-    "5. Association testing\n"
+    "5. Association testing"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "kernel": "SoS"
+   },
    "source": [
-    "## Data reformatting"
+    "## Data reformatting\n",
+    "This step transform the format of ROSMAP RNA-Seq data and annotate the posistion of each genes"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "kernel": "SoS"
+   },
    "outputs": [],
    "source": [
     "sos run ~/GIT/neuro-twas/Workflow/SOS_ROSMAP_gene_exp_processing.ipynb \\\n",
@@ -58,15 +71,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "kernel": "SoS"
+   },
    "source": [
     "## Generation of Whole genome prior\n",
     "with modified windows and shared SNPs"
@@ -75,7 +83,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "kernel": "SoS"
+   },
    "outputs": [],
    "source": [
     "nohup sos run ~/GIT/neuro-twas/Workflow/susie-wgs-prior.ipynb susie  \\\n",
@@ -94,7 +104,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "kernel": "SoS"
+   },
    "outputs": [],
    "source": [
     "nohup sos run ~/GIT/neuro-twas/Workflow/susie-wgs-prior.ipynb susie  \\\n",
@@ -113,7 +125,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "kernel": "SoS"
+   },
    "outputs": [],
    "source": [
     "nohup sos run ~/GIT/neuro-twas/Workflow/susie-wgs-prior.ipynb susie  \\\n",
@@ -131,14 +145,18 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "kernel": "SoS"
+   },
    "source": [
     "### Compute the mixture prior ( Use the updated version)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "kernel": "SoS"
+   },
    "source": [
     "#### Merging the tissues"
    ]
@@ -146,7 +164,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "kernel": "SoS"
+   },
    "outputs": [],
    "source": [
     "nohup sos run ~/GIT/bioworkflows/multivariate-fine-mapping/mixture_prior.ipynb convert_plink \\\n",
@@ -160,7 +180,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "kernel": "SoS"
+   },
    "source": [
     "#### Extracting the strongest, null .etc signals"
    ]
@@ -168,7 +190,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "kernel": "SoS"
+   },
    "outputs": [],
    "source": [
     "    cd /home/hs3163/Project/Genome_prior/mixture_prior/output/RDS/  && ls *.rds | sed 's/\\.rds//g' > analysis_units.txt && cd -\n",
@@ -182,7 +206,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "kernel": "SoS"
+   },
    "source": [
     "#### Create flashr output\n"
    ]
@@ -190,7 +216,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "kernel": "SoS"
+   },
    "outputs": [],
    "source": [
     "nohup sos run ~/GIT/bioworkflows/multivariate-fine-mapping/mixture_prior.ipynb flash \\\n",
@@ -228,7 +256,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "kernel": "SoS"
+   },
    "source": [
     "#### Extreme Deconvolution"
    ]
@@ -236,7 +266,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "kernel": "SoS"
+   },
    "outputs": [],
    "source": [
     "for m in /home/hs3163/Project/Genome_prior/mixture_prior/output/RDS/; do\n",
@@ -276,7 +308,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "kernel": "SoS"
+   },
    "source": [
     "## MV SuSiE\n",
     "### Extracting Overlapped SNPs"
@@ -285,7 +319,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "kernel": "SoS"
+   },
    "outputs": [],
    "source": [
     "nohup sos run ~/GIT/neuro-twas/workflow/mv_susie.ipynb snp_exclude \\\n",
@@ -303,7 +339,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "kernel": "SoS"
+   },
    "source": [
     "### Weight estimation With three types of mixture prior"
    ]
@@ -311,7 +349,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "kernel": "SoS"
+   },
    "outputs": [],
    "source": [
     "nohup sos run ~/GIT/neuro-twas/Workflow/mv_susie.ipynb mv_susie \\\n",
@@ -350,7 +390,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "kernel": "SoS"
+   },
    "source": [
     "### Output Reformatting"
    ]
@@ -358,7 +400,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "kernel": "SoS"
+   },
    "outputs": [],
    "source": [
     "nohup sos run ~/GIT/neuro-twas/Workflow/mv_susie.ipynb fusion_tf \\\n",
@@ -369,7 +413,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "kernel": "SoS"
+   },
    "source": [
     "## Association testing"
    ]
@@ -377,7 +423,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "kernel": "SoS"
+   },
    "outputs": [],
    "source": [
     "nohup sos run ~/GIT/neuro-twas/Workflow/twas_fusion_susie.ipynb association_test  \\\n",
@@ -449,6 +497,17 @@
    "name": "sos",
    "nbconvert_exporter": "sos_notebook.converter.SoS_Exporter",
    "pygments_lexer": "sos"
+  },
+  "sos": {
+   "kernels": [
+    [
+     "SoS",
+     "sos",
+     "",
+     ""
+    ]
+   ],
+   "version": "0.22.3"
   }
  },
  "nbformat": 4,
