--- a/workflow/twas_fusion.ipynb
+++ b/workflow/twas_fusion.ipynb
@@ -7,7 +7,7 @@
    },
    "source": [
     "# TWAS FUSION analysis\n",
-    "Ready to use worflow to perform TWAS analysis by connecting the components of FUSION"
+    "Ready to use pipeline to perform TWAS analysis by connecting the components of FUSION"
    ]
   },
   {
