--- a/workflow/uni_susie.ipynb
+++ b/workflow/uni_susie.ipynb
@@ -7,7 +7,7 @@
    },
    "source": [
     "# Susie whole genome sequencing\n",
-    "Ready to use worflow to estimate univariate association between a molecular phenotype and the genotypes via SuSiE. "
+    "Ready to use pipeline to estimate univariate association between a molecular phenotype and the genotypes via SuSiE. "
    ]
   },
   {
@@ -18,7 +18,17 @@
    "source": [
     "## Pre-requisites\n",
     "\n",
-    "We provide a container image `docker://gaow/twas` that contains all software needed to run the pipeline. If you would like to configure it by yourself, please make sure you install the following software before running this notebook.\n"
+    "We provide a container image `docker://gaow/twas` that contains all software needed to run the pipeline. If you would like to configure it by yourself, please make sure you install the following software before running this notebook.\n",
+    "\n",
+    "Bash:\n",
+    "- GCTA\n",
+    "- PLINK\n",
+    "\n",
+    "R: \n",
+    "- Tidyverse\n",
+    "- susieR\n",
+    "- modelr\n",
+    "- abind"
    ]
   },
   {
