--- a/analysis/TWAS_comp.ipynb
+++ b/analysis/TWAS_comp.ipynb
@@ -5,55 +5,14 @@
    "metadata": {},
    "source": [
     "# Pilot Study: Performance comparison between MV SuSiE and FUSION\n",
-    "After the gene expression weights are estimated via multivariate susie, the accuracy of imputed gene expression for MV SuSiE and FUSION are compared. "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Attaching package: ‘dplyr’\n",
-      "\n",
-      "\n",
-      "The following objects are masked from ‘package:stats’:\n",
-      "\n",
-      "    filter, lag\n",
-      "\n",
-      "\n",
-      "The following objects are masked from ‘package:base’:\n",
-      "\n",
-      "    intersect, setdiff, setequal, union\n",
-      "\n",
-      "\n",
-      "Registered S3 methods overwritten by 'ggplot2':\n",
-      "  method         from \n",
-      "  [.quosures     rlang\n",
-      "  c.quosures     rlang\n",
-      "  print.quosures rlang\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "library(dplyr)\n",
-    "library(tibble)\n",
-    "library(readr)\n",
-    "library(ggplot2)\n",
-    "library(purrr)\n",
-    "library(tidyr)"
+    "Comparison between the accuracy of gene expression imputation for MV SuSiE and FUSION. "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Data Processing"
+    "## TWAS result for Fusion"
    ]
   },
   {
@@ -119,7 +78,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## TWAS for mv susie"
+    "## TWAS result for mv susie"
    ]
   },
   {
