--- a/analysis/pilot_study_twas_fusion.ipynb
+++ b/analysis/pilot_study_twas_fusion.ipynb
@@ -6,7 +6,15 @@
     "kernel": "SoS"
    },
    "source": [
-    "# Pilot Study: TWAS/FUSION for Alzheimer risk locus\n",
+    "# Pilot Study: TWAS/FUSION for Alzheimer risk locus \n",
+    "A brief analysis on the result of Fusion TWAS analysis  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Background \n",
     "A recent research on Alzheimer disease at 2019 identified 198 unique genes of interest from both table 1 and supplementary table 13. They are\n",
     "\n",
     "34 genes from \n",
@@ -17,7 +25,7 @@
     "\n",
     "Among them, 6 genes in Table 1 are not covered in S_Table 13, making a total of 198 genes.\n",
     "\n",
-    "This analysis take these regions, cross reference them with the genes that were sequenced in the ROSMAP data set, and then compute the weight and Association stats for it. \n"
+    "This analysis take these regions, cross reference them with the genes that were sequenced in the ROSMAP data set, and then compute the weight and Association stats for it. "
    ]
   },
   {
