--- a/analysis/rosmap_data_description.ipynb
+++ b/analysis/rosmap_data_description.ipynb
@@ -6,7 +6,16 @@
     "kernel": "SoS"
    },
    "source": [
-    "# ROSMAP Data Description\n",
+    "# ROSMAP Data Description \n",
+    "Brief Description of ROSMAP data set"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "kernel": "SoS"
+   },
+   "source": [
     "## Background\n",
     "The data used is the ROSEMAP data set, a combination of two studies: The Religious order Study (ROS) and the Memory and Aging Project (MAP)-that recruit older individuals without known dementia and include detailed cognitive, neuroimaging and other ante-mortem phenotyping and (2) an autopsy at the time of death that includes a structured neuropathologic examination. A detailed description of the study's background can be found at\n",
     "\n",
@@ -359,7 +368,7 @@
      "sos"
     ]
    ],
-   "version": "0.20.1"
+   "version": "0.22.3"
   }
  },
  "nbformat": 4,
