--- a/analysis/pilot_study_twas_fusion.ipynb
+++ b/analysis/pilot_study_twas_fusion.ipynb
@@ -7,7 +7,7 @@
    },
    "source": [
     "# Pilot Study: TWAS/FUSION for Alzheimer risk locus \n",
-    "A brief analysis on the result of Fusion TWAS analysis  "
+    "Result for analzing the output of Fusion TWAS result"
    ]
   },
   {
