--- a/analysis/rosmap_data_description.ipynb
+++ b/analysis/rosmap_data_description.ipynb
@@ -7,7 +7,7 @@
    },
    "source": [
     "# ROSMAP Data Description \n",
-    "Brief Description of ROSMAP data set"
+    "Brief description of ROSMAP data set"
    ]
   },
   {
